Login layout done for large and mobile device

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,14 @@
   font-family: Poppins, sans-serif;
 }
 
+.border-orange {
+  color: #FC4F00;
+}
+
+.bg-orange {
+  background-color: #FC4F00;
+}
+
 .text-orange {
   color: #FC4F00;
 }
